methods for getting walls and searching walls by theme and title
