# doc/api/openapi.json
@@ -30,6 +30,10 @@
     {
       "name": "Posts",
       "description": "Operations related to chat rooms memberships and messages"
+    },
+    {
+      "name": "Walls",
+      "description": "Operations related to walls"
     }
   ],
   "paths": {
@@ -1868,6 +1872,219 @@
                       "wall_id": 6,
                       "post_text": "Я поймал и расколдовал стрыгу!!! :D",
                       "created_at": "2024-01-19T10:50:26.441Z"
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized - Invalid credentials",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string"
+                    }
+                  },
+                  "example": {
+                    "message": "Not authorized"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    }
+                  },
+                  "example": {
+                    "message": "Server error"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/walls/group-walls": {
+      "get": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "summary": "Get all group walls",
+        "description": "This method returns a list of all group walls",
+        "operationId": "getGroupWalls",
+        "tags": ["Walls"],
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "wall_id": {
+                        "type": "integer"
+                      },
+                      "wall_group_id": {
+                        "type": "integer"
+                      },
+                      "wall_img": {
+                        "type": "integer"
+                      },
+                      "wall_title": {
+                        "type": "string"
+                      },
+                      "wall_theme": {
+                        "type": "string"
+                      }
+                    }
+                  },
+                  "example": [
+                    {
+                      "wall_id": 61,
+                      "wall_group_id": 7,
+                      "wall_img": "https://i.ibb.co/KVwYr15/327893448828.webp",
+                      "wall_title": "This is wall title",
+                      "wall_theme": "GAMES"
+                    },
+                    {
+                      "wall_id": 62,
+                      "wall_group_id": 8,
+                      "wall_img": "https://i.ibb.co/KVwYr15/327893448828.webp",
+                      "wall_title": "This is wall title",
+                      "wall_theme": "GAMES"
+                    }
+                  ]
+                }
+              }
+            }
+          },
+          "401": {
+            "description": "Unauthorized - Invalid credentials",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "error": {
+                      "type": "string"
+                    }
+                  },
+                  "example": {
+                    "message": "Not authorized"
+                  }
+                }
+              }
+            }
+          },
+          "500": {
+            "description": "Server error",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "object",
+                  "properties": {
+                    "message": {
+                      "type": "string"
+                    }
+                  },
+                  "example": {
+                    "message": "Server error"
+                  }
+                }
+              }
+            }
+          }
+        }
+      }
+    },
+    "/walls/search-walls": {
+      "put": {
+        "security": [
+          {
+            "bearerAuth": []
+          }
+        ],
+        "summary": "Get all walls with the theme and title starting with title",
+        "description": "This method returns a list group walls filtered by themes and title",
+        "operationId": "searchGroupWalls",
+        "tags": ["Walls"],
+        "requestBody": {
+          "required": true,
+          "content": {
+            "application/json": {
+              "schema": {
+                "type": "object",
+                "properties": {
+                  "theme": {
+                    "type": "string"
+                  },
+                  "title": {
+                    "type": "string"
+                  }
+                },
+                "required": ["theme", "title"]
+              }
+            }
+          }
+        },
+        "responses": {
+          "200": {
+            "description": "Success",
+            "content": {
+              "application/json": {
+                "schema": {
+                  "type": "array",
+                  "items": {
+                    "type": "object",
+                    "properties": {
+                      "wall_id": {
+                        "type": "integer"
+                      },
+                      "wall_group_id": {
+                        "type": "integer"
+                      },
+                      "wall_img": {
+                        "type": "integer"
+                      },
+                      "wall_title": {
+                        "type": "string"
+                      },
+                      "wall_theme": {
+                        "type": "string"
+                      }
+                    }
+                  },
+                  "example": [
+                    {
+                      "wall_id": 61,
+                      "wall_group_id": 7,
+                      "wall_img": "https://i.ibb.co/KVwYr15/327893448828.webp",
+                      "wall_title": "This is wall title",
+                      "wall_theme": "GAMES"
+                    },
+                    {
+                      "wall_id": 62,
+                      "wall_group_id": 8,
+                      "wall_img": "https://i.ibb.co/KVwYr15/327893448828.webp",
+                      "wall_title": "This is wall title",
+                      "wall_theme": "GAMES"
                     }
                   ]
                 }
